intel/bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/log.txt
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:56:20: error: assigning to 'int *' from incompatible type 'void *'
                track->aa.robj = NULL;
                                 ^~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:60:23: error: assigning to 'int *' from incompatible type 'void *'
                track->cb[i].robj = NULL;
                                    ^~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:66:19: error: assigning to 'int *' from incompatible type 'void *'
        track->zb.robj = NULL;
                         ^~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:75:27: error: assigning to 'int *' from incompatible type 'void *'
                track->arrays[i].robj = NULL;
                                        ^~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:94:29: error: assigning to 'int *' from incompatible type 'void *'
                track->textures[i].robj = NULL;
                                          ^~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:102:47: error: assigning to 'int *' from incompatible type 'void *'
                                track->textures[i].cube_info[face].robj = NULL;
                                                                          ^~~~
bench_214_work/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main/extr_.linuxdriversgpudrmradeonr100.c_r100_cs_track_clear_with_main.c:2:14: note: expanded from macro 'NULL'
#define NULL ((void*)0)
             ^~~~~~~~~~
7 errors generated.
HLS FPGA Parse FAILED.
